<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide">Glide</string>
    <string name="download_app">Download App</string>
    <string name="retrofit">Retrofit</string>
    <string name="filename">File Name:</string>
    <string name="status">Status:</string>
    <string name="OK">OK</string>
    <string name="please_choose_url">Please Choose URL!</string>
    <string name="notification_channel_name">App Status Channel</string>
    <string name="notification_channel_description">Noti Channel Description</string>
</resources>
