<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">
    <RadioGroup
        android:id="@+id/radio_group_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_radio_group"
        android:layout_marginEnd="@dimen/margin_radio_group"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <RadioButton
            android:id="@+id/radio_btn_glide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/radio_btn_height"
            android:text="@string/glide"
            android:onClick="clickRadioButton"/>
        <RadioButton
            android:id="@+id/radio_btn_download_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/radio_btn_height"
            android:text="@string/download_app"
            android:onClick="clickRadioButton"/>
        <RadioButton
            android:id="@+id/radio_btn_retrofit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/radio_btn_height"
            android:text="@string/retrofit"
            android:onClick="clickRadioButton"/>
    </RadioGroup>
    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="@dimen/height_loading_button"
        android:layout_margin="@dimen/margin_loading_button"
        app:backgroundColor="@color/colorPrimary"
        app:textColor="@color/white"
        app:buttonLoadingColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/radio_group_main"
        app:buttonCircleColor="@color/circleColor"/>
</androidx.constraintlayout.widget.ConstraintLayout>